# Loru

./: .gitignore  CONTRIBUTING.md  ISSUE_11_STUB.txt  README.md  ai_solution.py  coverage.xml  pyproject.toml
data/: bounty-100.json  bounty-101.json  bounty-102.json  bounty-103.json  bounty-104.json  bounty-105.json  bounty-106.json  bounty-108.json  bounty-109.json  bounty-110.json  bounty-111.json  bounty-112.json  bounty-113.json  bounty-114.json  bounty-115.json  bounty-116.json  bounty-117.json  bounty-118.json  bounty-119.json  bounty-120.json  bounty-121.json  bounty-122.json  bounty-123.json  bounty-124.json  bounty-125.json  bounty-126.json  bounty-127.json  bounty-128.json  bounty-150.json  bounty-151.json  bounty-152.json  bounty-153.json  bounty-154.json  bounty-155.json  bounty-156.json  bounty-157.json  bounty-158.json  bounty-159.json  bounty-165.json  bounty-166.json  (+62 more)
docs/: ACCESSIBILITY.md  BOUNTY.md  CONSENT_CHECKLIST.md  CONSENT_TEMPLATE.md  DATASETS.md  GLOSS_SAMPLE_NOTES.md  ROADMAP.md  signs.md
scripts/: capture_gui_shots.py  create-bounties.mjs  gen_unique_pack.py
src/: cli.py  data_processor.py  gloss_coverage.py  gloss_detector.py  gloss_utils.py
tests/: test_api.py  test_cli.py  test_cli_coverage.py  test_compare.py  test_dedupe.py  test_duplicate.py  test_duplicates.py  test_eval_metrics.py  test_export_csv.py  test_gloss_coverage.py  test_gloss_detector.py  test_gloss_heatmap.py  test_gloss_to_text.py ---  test_infer.py  test_infer.py ---  test_loader.py  test_metrics.py  test_samples_cli.py  test_train.py  test_vocab_csv.py  (+1 more)
(+205 files in other folders)
